[gd_scene load_steps=18 format=3 uid="uid://dkcmbvbpevx4"]

[ext_resource type="Texture2D" uid="uid://rqr0n4hhqr54" path="res://Textures/Player/player_sprite.png" id="1_0qt4p"]
[ext_resource type="Script" path="res://Player/player.gd" id="1_rt2pq"]
[ext_resource type="PackedScene" uid="uid://fxmhxrjya1xw" path="res://Utility/hurt_box.tscn" id="3_wqgsr"]
[ext_resource type="Texture2D" uid="uid://dgbrfhfqv1gc8" path="res://Textures/GUI/exp_background.png" id="4_bxpud"]
[ext_resource type="Texture2D" uid="uid://b3ui3o5blyvoy" path="res://Textures/GUI/exp_progress.png" id="5_xn1es"]
[ext_resource type="FontFile" uid="uid://ocyhy61xhnsp" path="res://Font/tenderness.otf" id="6_j3eet"]
[ext_resource type="AudioStream" uid="uid://dqgpdovmxxsi1" path="res://Audio/SoundEffect/levelup.ogg" id="7_lcdic"]
[ext_resource type="Texture2D" uid="uid://daw6w7kyt11i7" path="res://Textures/GUI/healthbar.png" id="8_5xc40"]
[ext_resource type="Texture2D" uid="uid://ddlo6tmur28hp" path="res://Textures/GUI/health.png" id="9_yk1nx"]
[ext_resource type="AudioStream" uid="uid://dolt8s62cdl2v" path="res://Audio/SoundEffect/Victory.wav" id="10_kxi0x"]
[ext_resource type="AudioStream" uid="uid://sghxgfl4o7f" path="res://Audio/SoundEffect/Lose.ogg" id="11_y4hhe"]
[ext_resource type="PackedScene" uid="uid://cgi4mhmcf430q" path="res://Utility/basic_button.tscn" id="12_dstwd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m1jrd"]
radius = 6.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y2vrf"]
size = Vector2(14, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_2n0w5"]
radius = 368.307

[sub_resource type="CircleShape2D" id="CircleShape2D_ydf6f"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_meulw"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_rt2pq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_0qt4p")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 3)
shape = SubResource("CapsuleShape2D_m1jrd")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="walkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource("3_wqgsr")]
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(2, 3)
shape = SubResource("RectangleShape2D_y2vrf")

[node name="Attack" type="Node2D" parent="."]

[node name="IceLanceTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="IceLanceAttackTimer" type="Timer" parent="Attack/IceLanceTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="TornadoTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="TornadoAttackTimer" type="Timer" parent="Attack/TornadoTimer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="JavelinBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_2n0w5")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_ydf6f")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_meulw")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_under = ExtResource("4_bxpud")
texture_progress = ExtResource("5_xn1es")

[node name="LabelLevel" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 540.0
offset_right = 640.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("6_j3eet")
theme_override_font_sizes/font_size = 16
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 0
offset_left = 304.0
offset_top = 200.0
offset_right = 336.0
offset_bottom = 208.0
texture_over = ExtResource("8_5xc40")
texture_progress = ExtResource("9_yk1nx")

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0

[node name="LabelLevelUp" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("6_j3eet")
text = "Level UP!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="SoundLevelUp" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
stream = ExtResource("7_lcdic")
volume_db = -10.0

[node name="DeathPanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 253.0
offset_top = -484.0
offset_right = 453.0
offset_bottom = -234.0

[node name="LabelResult" type="Label" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("6_j3eet")
text = "Result"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundVictory" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("10_kxi0x")
volume_db = -10.0

[node name="SoundLose" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("11_y4hhe")
volume_db = -10.0

[node name="ButtonMenu" parent="GUILayer/GUI/DeathPanel" instance=ExtResource("12_dstwd")]
layout_mode = 0
offset_left = 60.0
offset_top = 200.0
offset_right = 140.0
offset_bottom = 230.0
text = "Menu"

[node name="LabelTimer" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 280.0
offset_top = 20.0
offset_right = 360.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource("6_j3eet")
theme_override_font_sizes/font_size = 20
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectedWeapons" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 208.0
offset_bottom = 40.0
columns = 10

[node name="CollectedUpgrades" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 208.0
offset_bottom = 56.0
columns = 10

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/IceLanceTimer" to="." method="_on_ice_lance_timer_timeout"]
[connection signal="timeout" from="Attack/IceLanceTimer/IceLanceAttackTimer" to="." method="_on_ice_lance_attack_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer" to="." method="_on_tornado_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer/TornadoAttackTimer" to="." method="_on_tornado_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="click_end" from="GUILayer/GUI/DeathPanel/ButtonMenu" to="." method="_on_button_menu_click_end"]

[editable path="HurtBox"]
